--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@ box-sizing: border-box;
 
 body {
 	font-family: "Koulen", sans-serif;
-	background-image: url("images/background.jpg");
+/*	background-image: url("images/background.jpg");
 	background-repeat: no-repeat;
-	background-size: 100% 60%;
+	background-size: 100% 60%;*/
 }
 
 
@@ -81,11 +81,10 @@ a:hover {
 
 /*HEADER BAR*/
 header {
-	/*background-image: url("images/background.jpg");*/
-	/*background-repeat: no-repeat;
-	background-size: 100% 100%;*/
+	background-image: url("images/background.jpg");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
 	display: flex;
-	/*justify-content: flex-end;*/
 }
  
  
@@ -123,8 +122,30 @@ header {
 /*ABOUT ME SECTION*/
 
 main {
-	background-color: #B8CFDE;
+	background-color: #B6CEDB;
 }
+
+.mainSection {
+	display: grid;
+	column-gap: 20px;
+	grid-auto-flow: column;
+	grid-template-columns: 50% 50%;
+	align-items: center;
+	padding-bottom: 0;
+	/*border-left: 5px solid #F69415;*/
+	/*border-image: linear-gradient(#B6CEDB, #F69415, #B6CEDB);*/
+}
+
+.mainInfo {
+	column-gap: 20px;
+		border-right: 5px solid #F69415;
+	}
+
+.mainImage img {
+	display: block;
+	margin: 0 auto;
+	}
+
 
 
 
@@ -136,27 +157,30 @@ main {
 article {
 	/*background-color: #7FA0B3;*/
 	background-color: #FFFFFF;
+	padding: 20px;
+	box-shadow: inset 0 0 10px #AAAAAA;
 }	
 
 .articleHeader {
 	display: flex;
 	justify-content: center;
-			
-	
+    
 }
 
 article section /*.articleSection*/ {
 	display: grid;
 	grid-auto-flow: column;
-	grid-template-columns: 200px auto auto;
-	
+	grid-template-columns: auto auto auto;
 }
 
 
 article section div img {
-    height: 200px;
-          position: relative;
-          overflow: hidden;
+    height: 250px;
+	width: 100%;
+	padding-bottom: 20px;
+   /* position: relative;
+    overflow: hidden;*/
+   object-fit: contain;
 }
 
 
@@ -169,15 +193,22 @@ article section div img {
 /*	text-align: center;*/
 	margin: 0;
 	color: #000000;
+    text-decoration: underline solid #F69415 5px ;
 }
 
+.articleLeft {
+	padding-right: 20px;
+}
 
 .articleMiddle {
-	padding: 0 10px;
+	padding-right: 20px;
+	padding-left: 20px;
 }
 
 
-
+ .articleRight {
+	 padding-left: 20px;
+ }
 
 /*FOOTER*/
 footer {
