--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body {
 	background-size: 100% 60%;*/
 }
 
-
 section {
 	padding: 10px 10%;
 	display: flex;
@@ -121,11 +120,11 @@ header {
 
 /*ABOUT ME SECTION*/
 
-main {
+article#aboutMe {
 	background-color: #B6CEDB;
 }
 
-.mainSection {
+.aboutMeSection {
 	display: grid;
 	column-gap: 20px;
 	grid-auto-flow: column;
@@ -136,25 +135,29 @@ main {
 	/*border-image: linear-gradient(#B6CEDB, #F69415, #B6CEDB);*/
 }
 
-.mainInfo {
+.articleInfo {
 	column-gap: 20px;
 	border-right: 5px solid #F69415;   
 	}
 
-.mainImage img {
+.articleImage img {
 	display: block;
 	margin: 0 auto;
 	}
+	
+	
+	
+
 
 
 /*RESPONSIVE MAIN*/
 	@media screen and (max-width: 1000px){
-	   .mainImage {
+	   .articleImage {
 			width: 20%;
 			display: none;
 			}
 			
-		.mainSection {
+		.aboutMeSection {
 			display: flex;	
 			}
 }
@@ -166,78 +169,70 @@ main {
 
 
 /*MY PORTFOLIO SECTION*/
-article {
+main#portfolio {
 	/*background-color: #7FA0B3;*/
 	background-color: #FFFFFF;
 	padding: 20px;
 	box-shadow: inset 0 0 10px #AAAAAA;
 }	
 
-.articleHeader {
+.portfolioHeader, .portfolioSection {
 	display: flex;
 	justify-content: center;
-    
 }
 
-article section /*.articleSection*/ {
-	display: grid;
-	grid-auto-flow: column;
-	grid-template-columns: repeat(3, auto auto auto);
+
+main#portfolio .portfolioSection /*div*/{
+	display: flex;
+/*    justify-content: center;*/
+    flex-wrap: wrap;
+    align-items: stretch;
+    padding: 20px;
+}
 	
+	
+.portfolioContainer {
+    /* width: 30%; */
+    background-color: #FFFFFF;
+  /*  overflow: hidden;*/
+   /* margin: 10px;*/
+    min-height: 350px;
+    min-width: 0px;
+	padding: 0 40px;
+}	
+		
+.portfolioContainer img {
+	    display: block;
+	    margin-left: auto;
+	    margin-right: auto;
+	    object-fit: cover;
+	    width: 100%;
+	    height: 250px;
+		/*padding-bottom: 20px;*/
 }
 
-
-article section div img {
+.portfolioText {
+    width: 350px;
     height: 250px;
-	width: 100%;
-	padding-bottom: 20px;
-   /* position: relative;
-    overflow: hidden;*/
-   object-fit: contain;
+   
+}
+
+.portfolioText h4 {
+	margin: 0;
+	color: #000000;
+    text-decoration: underline solid #F69415 5px;
+	padding: 30px 0;
 }
 
 
-
-.articleLeft, .articleMiddle, .articleRight {
+.portfolioText p {
+	margin: 0;
 	color: #466D87;
 }
 
-.articleSection div h4 {
-/*	text-align: center;*/
-	margin: 0;
-	color: #000000;
-    text-decoration: underline solid #F69415 5px ;
-}
-
-.articleLeft {
-	padding-right: 20px;
-}
-
-.articleMiddle {
-	padding-right: 20px;
-	padding-left: 20px;
-}
-
-
- .articleRight {
-	 padding-left: 20px;
- }
 
 
 
- /*RESPONSIVE ARTICLE*/
- 	@media screen and (max-width: 1000px){
- 	   .articleHeader {
- 			width: 20%;
- 			display: inline-block;
- 			}	
-			/*.articleLeft, .articleMiddle, .articleRight {
-	 			display: flex;
-				flex-wrap: wrap;
-	 			}*/
- }
-
- /*RESPONSIVE ARTICLE*/
 
 
 
