--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
 * {
-box-sizing: border-box;
-}
+	box-sizing: border-box;
+	}
 
 body {
 	font-family: "Koulen", sans-serif;
 /*	background-image: url("images/background.jpg");
 	background-repeat: no-repeat;
 	background-size: 100% 60%;*/
-}
+	}
 
 section {
 	padding: 10px 10%;
 	display: flex;
-}
+	}
 
 /*NAV BAR*/
 nav {
@@ -23,15 +23,14 @@ nav {
 	align-items: center;
 	padding: 10px 10%;	
 	width: 100%;
-	
-}
+	}
 
 .navLogo {
 	/*font-size*/
 	color: #63879E;
 	text-decoration: none;
 	font-weight: bold;
-}
+	}
 
 .navRight a {
 	/*font-size*/
@@ -39,16 +38,15 @@ nav {
 	text-decoration: none;
 	font-weight: bold;
 	padding-left: 20px;
-}
+	}
 
 a:hover {
 	color: #B8CFDE;
-}
+	}
 	
 .navResponsive {
 	display: none;
-	
-}
+	}
 
 
 /*RESPONSIVE NAV BAR*/
@@ -83,45 +81,41 @@ header {
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	display: flex;
-}
+	}
  
  
 .sectionHeader {
 	padding: 10px 10%;
 	flex-flow: column wrap;
-}
+	}
  
  
 .sectionHeader h1 {
 	font-size: 100px;
 	color: #FFFFFF;	
-}
+	}
 
 #headerUpper {
 	margin-bottom: 0;
 	margin-top: 200px;
-	
-}
+	}
 
 #headerLower {
 	margin-top: 0px;
-}
+	}
 
 .sectionHeader h2 {
 	font-size: 50px;
 	color: #FFFFFF;
 	margin-top: 0px;
-
-
-}
+	}
 
 
 
 /*ABOUT ME SECTION*/
-
 article#aboutMe {
 	background-color: #B6CEDB;
-}
+	}
 
 .aboutMeSection {
 	display: grid;
@@ -132,7 +126,7 @@ article#aboutMe {
 	padding-bottom: 0;
 /*	border-right: 5px solid #F69415;*/
 	/*border-image: linear-gradient(#B6CEDB, #F69415, #B6CEDB);*/
-}
+	}
 
 
 
@@ -140,7 +134,8 @@ article#aboutMe {
 	border-right: 5px solid #F69415; 
 	border-image: linear-gradient(#B6CEDB, #F69415, #B6CEDB);
 	padding-right: 10px; 
-	
+	text-align: justify;
+	text-justify: inter-word;
 	}
 
 .articleImage img {
@@ -176,12 +171,12 @@ main#portfolio {
 	background-color: #FFFFFF;
 	padding: 20px;
 	box-shadow: inset 0 0 10px #AAAAAA;
-}	
+	}	
 
 .portfolioHeader, .portfolioSection {
 	display: flex;
 	justify-content: center;
-}
+	}
 
 
 main#portfolio .portfolioSection {
@@ -189,7 +184,7 @@ main#portfolio .portfolioSection {
     flex-wrap: wrap;
     align-items: stretch;
     padding: 20px;
-}
+	}
 	
 	
 .portfolioContainer {
@@ -200,35 +195,33 @@ main#portfolio .portfolioSection {
     min-height: 350px;
     min-width: 0px;
 	padding: 0 40px;
-}	
+	}	
 		
 .portfolioContainer img {
-	    display: block;
-	    margin-left: auto;
-	    margin-right: auto;
-	    object-fit: cover;
-	    width: 100%;
-	    height: 310px;
-		/*padding-bottom: 20px;*/
-}
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	object-fit: cover;
+	width: 100%;
+	height: 310px;
+	}
 
 .portfolioText {
     width: 350px;
-    height: 250px;
-   
-}
+    height: 250px;  
+	}
 
 .portfolioText h4 {
 	margin: 0;
 	color: #000000;
     text-decoration: underline solid #F69415 5px;
 	padding: 30px 0;
-}
+	}
 
 .portfolioText p {
 	margin: 0;
 	color: #466D87;
-}
+	}
 
 
 
@@ -242,34 +235,34 @@ footer {
 	display: flex;
 	padding: 10px 10%;
 	flex-direction: column;
-}
+	}
 
 .footerUpper, .footerCopyright p   {
 	color: #63879E;
-}
+	}
 
 .footerLower {
 	display: flex;
 	flex-direction: row;
-}
+	}
 
 .footerLower a img {
 	width: 5rem;
 	height: 5rem;
-}
+	}
 
 .footerLower a {
 	padding-right: 3rem;
-}
+	}
 
  
 .footerLower a img:hover {
 	filter: invert(100%);
-}
+	}
 
 .footerResponsive {
 	display: none;
-}
+	}
 
 /*RESPONSIVE FOOTER*/
 @media screen and (max-width: 1000px){
