--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,12 @@ nav {
 	}
 
 .navLogo {
-	/*font-size*/
 	color: #63879E;
 	text-decoration: none;
 	font-weight: bold;
 	}
 
 .navRight a {
-	/*font-size*/
 	color: #63879E;
 	text-decoration: none;
 	font-weight: bold;
@@ -48,32 +46,28 @@ a:hover {
 	display: none;
 	}
 
-
 /*RESPONSIVE NAV BAR*/
 @media screen and (max-width: 1000px){
-    .navLeft, .navRight {
-        display: none;
-	 }
-	 
-	 .navResponsive {
-		 display: inline-block;
-		 text-decoration: none;
-		 font-weight: bold;
-		 color: #63879E;
-	 }   		 
+.navLeft, .navRight {
+	display: none;
+	}
+	
+.navResponsive {
+	display: inline-block;
+	text-decoration: none;
+	font-weight: bold;
+	color: #63879E;
+	}   		 
 	  
-	  .navResponsive a {
-		  text-decoration: none;
-		  color: #63879E;
-	  }
+.navResponsive a {
+	text-decoration: none;
+	color: #63879E;
+	}
 		
-		a:hover {
-			color: #B8CFDE;
-		}
+a:hover {
+	color: #B8CFDE;
+	}
 }
-
-
-
 
 /*HEADER BAR*/
 header {
@@ -83,12 +77,10 @@ header {
 	display: flex;
 	}
  
- 
 .sectionHeader {
 	padding: 10px 10%;
 	flex-flow: column wrap;
 	}
- 
  
 .sectionHeader h1 {
 	font-size: 100px;
@@ -110,8 +102,6 @@ header {
 	margin-top: 0px;
 	}
 
-
-
 /*ABOUT ME SECTION*/
 article#aboutMe {
 	background-color: #B6CEDB;
@@ -124,50 +114,38 @@ article#aboutMe {
 	grid-template-columns: 50% 50%;
 	align-items: center;
 	padding-bottom: 0;
-/*	border-right: 5px solid #F69415;*/
-	/*border-image: linear-gradient(#B6CEDB, #F69415, #B6CEDB);*/
 	}
 
-
-
 .articleInfo {
-	border-right: 5px solid #F69415; 
-	border-image: linear-gradient(#B6CEDB, #F69415, #B6CEDB);
+	/*border-right: 5px solid #F69415;*/
+	/*border-image: linear-gradient(#B6CEDB, #F69415, #B6CEDB);*/
 	padding-right: 10px; 
 	text-align: justify;
 	text-justify: inter-word;
 	}
 
+figure {
+	margin-block: unset;
+	}	
+	
 .articleImage img {
 	display: block;
 	margin: 0 auto;
-	}
+	}	
 	
-	
-	
-
-
-
 /*RESPONSIVE ABOUT ME*/
-	@media screen and (max-width: 1000px){
-	   .articleImage {
-			display: none;
-			}
-			
-		.aboutMeSection {
-			display: flex;	
-			}
+@media screen and (max-width: 1000px){
+	.articleImage {
+		display: none;
+		}
+		
+	.aboutMeSection {
+		display: flex;	
+		}
 }
-
-/*RESPONSIVE ABOUT ME*/
-
-
-
-
 
 /*MY PORTFOLIO SECTION*/
 main#portfolio {
-	/*background-color: #7FA0B3;*/
 	background-color: #FFFFFF;
 	padding: 20px;
 	box-shadow: inset 0 0 10px #AAAAAA;
@@ -188,10 +166,10 @@ main#portfolio .portfolioSection {
 	
 	
 .portfolioContainer {
-    /* width: 30%; */
+    /*width: 30%;*/
     background-color: #FFFFFF;
-  /*  overflow: hidden;*/
-   /* margin: 10px;*/
+	/*overflow: hidden;*/
+	/*margin: 10px;*/
     min-height: 350px;
     min-width: 0px;
 	padding: 0 40px;
@@ -223,12 +201,6 @@ main#portfolio .portfolioSection {
 	color: #466D87;
 	}
 
-
-
-
-
-
-
 /*FOOTER*/
 footer {
 	background-color: #476F89;
@@ -237,7 +209,7 @@ footer {
 	flex-direction: column;
 	}
 
-.footerUpper, .footerCopyright p   {
+.footerUpper, .footerCopyright p {
 	color: #63879E;
 	}
 
@@ -266,11 +238,11 @@ footer {
 
 /*RESPONSIVE FOOTER*/
 @media screen and (max-width: 1000px){
-   .footerUpper, .footerLower, .footerCopyright {
+	.footerUpper, .footerLower, .footerCopyright {
 		display: none;
 		}
-	 
-	 .footerUpper a {
+		
+	.footerUpper a {
 		text-decoration: none;
 		color: #63879E;
 		}
@@ -289,4 +261,3 @@ footer {
 		color: #B8CFDE;
 		}
 }
-/*RESPONSIVE FOOTER*/
